[package]
name = "main_app"
version = "0.1.0"
authors = ["aik <aik>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.19.2"
ash = "0.29.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.7", features = ["windef", "winuser"] }
